style.css
:root {
  --line: 1px;
  --color-main: #fff;
  --border: var(--line) solid var(--color-main);
  --ease-quart: cubic-bezier(0.25, 1, 0.5, 1);
}

@keyframes hover {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(20px);
  }

  100% {
    transform: translateY(0);
  }
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html,
body {
  width: 100%;
}

body {
  font-family: "degular-variable", sans-serif;
  font-size: 16px;
  background: #222;
  color: var(--color-main);
}

canvas {
  position: fixed;
  top: 50%;
  left: 50%;
  translate: -50% -50%;
  height: 100vmax;
  width: 100vmin;
  z-index: -1;
  pointer-events: none;
}

header {
  width: 100%;
  text-align: center;
  border-bottom: var(--border);
  padding: 30px 0;
  position: relative;
}

header span {
  font-size: 2rem;
  font-variation-settings: "wght" 800;
}

section {
  padding: 30px 0 0;
}

section > .line.hor {
  width: 0;
  height: var(--line);
}

h2 {
  font-size: 1rem;
  font-weight: normal;
  margin-bottom: 10px;
  padding-top: 20px;
}

img {
  height: 100%;
  width: 100%;
  object-fit: contain;
}

span {
  display: inline-block;
  padding-bottom: 10px;
  text-transform: uppercase;
  font-size: 0.7rem;
  width: 100%;
  font-variation-settings: "wght" 200;
}

.gutter {
  padding-inline: 40px;
}

.btn {
  color: var(--color-main);
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-variation-settings: "wght" 400;
  transition: all 0.5s var(--ease-quart);
}

.btn:hover {
  font-variation-settings: "wght" 800;
}

.product-tiles__container {
  display: grid;
  /* border-top: var(--border); */
  border-bottom: var(--border);
  position: relative;
}

.product-tile__item {
  display: flex;
  flex-flow: column nowrap;
  padding: 2em;
  position: relative;
}

.product-tile__content-wrapper,
.product-tile__image-wrapper {
  visibility: hidden;
}

.line {
  position: absolute;
  background: var(--color-main);
}

.product-tile__item:nth-child(odd) .line.vert {
  top: 0;
  right: 0;

  height: 0;
  width: var(--line);
}

.product-tile__item:nth-last-child(n + 3) .line.hor {
  left: 0;
  bottom: 0;

  height: var(--line);
  width: 100%;
}

.product-tile__image-wrapper {
  width: min(175px, 100%);
  aspect-ratio: 1;
  margin-inline: auto;
  padding: 2em 0;
}

.product-tile__image-wrapper {
  animation: hover 5s ease-in-out infinite;
}

.product-tile__item:nth-child(3n + 2) .product-tile__image-wrapper {
  animation-delay: 1.5s;
}

.product-tile__item:nth-child(3n + 3) .product-tile__image-wrapper {
  animation-delay: 2.5s;
}

.product-tile__content-wrapper {
  margin-top: 40px;
}

.product-tile__title {
  font-variation-settings: "wght" 200;
  letter-spacing: 1px;
  font-size: 1.5rem;
  transition: all 0.5s var(--ease-quart);
}

.product-tile__title:hover {
  font-variation-settings: "wght" 600;
}

.product_tile__details {
  display: flex;
  flex-flow: column nowrap;
  gap: 10px;
  width: min(250px, 100%);
  margin: 20px 0;
  overflow: hidden;
}

.reveal {
  overflow: hidden;
  border-bottom: var(--border);
}

.reveal span {
  transition: letter-spacing 0.5s var(--ease-quart);
}

.reveal:hover span {
  letter-spacing: 2px;
}

@media screen and (min-width: 750px) {
  .product-tiles__container {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (max-width: 749px) {
  .product-tile__item:nth-child(odd) .line.vert {
    display: none;
  }
}

